change canBlock logic renamed some fields